Changed the aside panel color again

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
 }
 
 .resume-aside {
-	background-color: #00A3FF;
+	background-color: #89DAFF;
 }
 
 /* Styles for lists in the document */
